channel-ib/kdc/micro-site/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: micro-site
  name: micro-site
spec:
  host: m.alinma.com
  port:
    targetPort: http
  tls:
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIEyDCCA7CgAwIBAgIQDPW9BitWAvR6uFAsI8zwZjANBgkqhkiG9w0BAQsFADBh
[...]
      JCqVJUzKoZHm1Lesh3Sz8W2jmdv51b2EQJ8HmA==
      -----END CERTIFICATE-----
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIGuTCCBaGgAwIBAgIQBxZHhJNt451nKnyppZ9KEDANBgkqhkiG9w0BAQsFADBZ
[...]
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQCisO+3WQUIO5vh
[...]
      bq6gZ/W4LVgu1nPXfcgQ8mfP
      -----END PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: micro-site
